--- a/scss/components/_disclosure.scss
+++ b/scss/components/_disclosure.scss
@@ -16,6 +16,11 @@
   cursor: pointer;
   padding: 0;
 
+  &-mobile {
+    position: relative;
+    z-index: 10;
+  }
+
   &:hover {
     color: $almost-black;
 
@@ -64,10 +69,7 @@
       display: block;
     }
 
-    .overlay {
-      display: none;
-    }
-
+    
     .disclosure__icon {
       transform: rotate(-180deg);
     }
@@ -87,22 +89,6 @@
     }
  
    }
-
-
-  &[aria-expanded='true'] {
-   + .disclosure__content-mobile + .overlay {
-    position: absolute;
-    background-color: black;
-    min-height: 100vh;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    width: 38.9%;
-    z-index: 10;
-    opacity: 0.5;
-   }
-
-  }
 }
 
 .btn--disclosure-mobile-close-btn {
@@ -164,11 +150,13 @@
 
 .disclosure__content-mobile {
   position: absolute;
-  right: -15px;
+  right: 0;
+  top: 0;
+  padding-block-start: 4rem;
+  padding-inline: 2rem;
   background-color: #fff;
   min-height: 100vh;
-  padding-inline: 2rem;
-  padding-block-start: 1rem;
+  box-shadow: 0px 0px 0px 100vw rgba(0, 0, 0, 0.6);
   width: 65%;
 
   &-nav-list {
